--- a/Triple EMA/Triple EMA.csproj
+++ b/Triple EMA/Triple EMA.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>cAlgo</RootNamespace>
     <AssemblyName>Triple EMA</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -52,6 +53,7 @@
     <Compile Include="TripleEMA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TripleEMA.HelperFunctions.cs" />
+    <Compile Include="TripleEMA.Parameters.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
