Attempting to fix bug with epsilons. Renamed cooldown methods to better names, and refactored hascrossedX methods to use PriceCrossedZone

--- a/Triple EMA/Triple EMA.csproj
+++ b/Triple EMA/Triple EMA.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TripleEMA.HelperFunctions.cs" />
     <Compile Include="TripleEMA.Parameters.cs" />
+    <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
